# Pygger

./: .gitignore  README.md  changelog.md  main.py  pyproject.toml
src/pygger/: __init__.py  colors.py  formatter.py  levels.py  logger.py  record.py
src/pygger/handlers/: __init__.py  base.py  console.py  null.py
tests/: sandbox.py  test_formatter.py  test_handler.py  test_levels.py  test_logger.py  test_record.py
